// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render 1`] = `
<Icon__StyledIcon
  className="fas fa-test"
  onClick={null}
/>
`;

exports[`<Icon /> should render placed tooltip when tipPlacement props defined 1`] = `
<Tooltip
  position="bottom"
  tip="Tooltip"
>
  <Icon__StyledIcon
    className="fas fa-test"
    onClick={null}
  />
</Tooltip>
`;

exports[`<Icon /> should render tooltip when tip props is defined 1`] = `
<Tooltip
  position="top"
  tip="Tooltip"
>
  <Icon__StyledIcon
    className="fas fa-test"
    onClick={null}
  />
</Tooltip>
`;

exports[`<Icon /> should render when [fixedWith=true] 1`] = `
<Icon__StyledIcon
  className="fas fa-test fixed-width"
  onClick={null}
/>
`;

exports[`<Icon /> should render when className prop provided 1`] = `
<Icon__StyledIcon
  className="heavy fas fa-test"
  onClick={null}
/>
`;
